contentcuration/contentcuration/static/less/clipboard.less
@import "global-variables.less";

#clipboard{	
	@clipboard-background-color:#E8E8E8;
	@clipboard-width:400px;
	*{margin:0;padding:0;}
	position:absolute;
	z-index:999999;
	right:0em;
	top: 7em;
	overflow-x:hidden;
	overflow-y:auto;

	.clipboard-toggler{
		cursor:pointer;
		padding: 15px;
	}
	
	.clipboard-button{
		@badge-color: #3E5E9F;
		border-radius:0px;
		border-bottom-right-radius: 10px;
		border-bottom-left-radius: 10px;
		background-color:@clipboard-background-color;
		
		margin-right: @clipboard-width / 2;
		color:black;
		border:none;
		font-size: 15px;
		font-weight:bold;
		.badge{
			background-color: @badge-color;
			color:white;
			padding: 2px 10px;
		}
	}

	#main-clipboard{
		@clipboard-border-color: #8DA9DB;
		@clipboard-height: 85vh;
		@clipboard-min-height: 600px;
		@clipboard-list-height: 60vh;
		@clipboard-list-item-height: 40px;
		@highlight-color: #E6E6E6;

		height:@clipboard-height;
		min-height: @clipboard-min-height;
		width:@clipboard-width;
		background-color:@clipboard-background-color;

		.clipboard_header{
			.glyphicon{
				margin-right:10px;
			}
		}
		#clipboard_content{
			margin:10px;
			width:100%;
			overflow-y:auto;
			.list_content{
				height:@clipboard-list-height;
				width: @clipboard-width - 20px;
				#list_background{
					position:absolute;
					border: 1px solid @clipboard-border-color;
					background-color:white;
					height:inherit;
					width:inherit;
				}
				ul{
					position:relative;
					height:inherit;
					overflow-y:auto;
					li{
						width:100%;
						padding:5px;
						input[type=checkbox]{
							display:inline-block;
							width:20px;
							height:20px;
							vertical-align:middle;
						}

						label{
							font-size:16px;
							vertical-align:middle;
							cursor:pointer;
							height:100%;
							width:@clipboard-width - 60px;
							.glyphicon{
								visibility:hidden;
								margin-right:15px;
							}
							input[type=text]{
								width:90%;
							}
						}

						width:100%;
						height:@clipboard-list-item-height;
						
					}

					.clipboard_item:hover{
						background-color: @highlight-color;
						.glyphicon{
							visibility:visible;
						}
					}
				}
			}
		}
	}
}

/*
.char_counter{
	font-weight:bold;
	font-size: 14px;
}
*/

